[#2184] Strip shared key from PSK credentials
The device registry implementations do no longer include the (secret)
shared key of PSK credentials in the result set of the Management API's
get credentials operation.

Fixes #2184

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>